--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,9 @@ security:
                 path: app_logout
                 # where to redirect after logout
                 # target: app_any_route
+            remember_me:
+                secret: "%kernel.secret%"
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
