--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
     "devDependencies": {
         "@symfony/stimulus-bridge": "^2.0.0",
-        "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/Resources/assets",
         "@symfony/webpack-encore": "^1.0.0",
-        "chart.js": "^2.9.4",
         "core-js": "^3.0.0",
         "file-loader": "^6.2.0",
         "regenerator-runtime": "^0.13.2",
@@ -22,6 +20,8 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "@popperjs/core": "^2.9.2",
         "bootstrap": "^5.0.1",
+        "chart.js": "^2.9.4",
+        "jquery": "^3.6.0",
         "toastr": "^2.1.4"
     }
 }
